<resources>
    <string name="app_name">Phincon Attendance</string>

    <string name="onboarding_skip">Skip</string>
    <string name="onboarding_title_one">Digital Absensi</string>
    <string name="onboarding_desc_one">Kehadiran sistem absensi digital merupakan penemuan yang mampu menggantikan pencatatan data kehadiran secara manual</string>
    <string name="onboarding_title_two">Attendance System</string>
    <string name="onboarding_desc_two">Pengelolaan karyawan di era digital yang baik, menghasilkan karyawan terbaik pula, salah satunya absensi karyawan</string>
    <string name="onboarding_title_three">Selalu Pakai Masker</string>
    <string name="onboarding_desc_three">Guna mencegah penyebaran virus Covid-19, Pemerintah telah mengeluarkan kebijakan Physical Distancing serta kebijakan bekerja, belajar, dan beribadah dari rumah.</string>

    <string name="all_login">Login</string>
    <string name="all_signup">Sign Up</string>
    <string name="login_title">Welcome to Login</string>
    <string name="login_desc">Please fill Username &amp; password to login your app account</string>
    <string name="all_email">Email</string>
    <string name="all_password">Password</string>
    <string name="all_star">***********</string>
    <string name="login_loginnow">Login Now</string>
    <string name="register_title">Create your account</string>
    <string name="register_desc">Please fill Fullname, Email &amp; Password \nto register your app</string>
    <string name="all_fullname">Full Name</string>
    <string name="hint_fullname">Employee fullname</string>
    <string name="register_repeatpassword">Repeat Password</string>
    <string name="all_register">Register</string>
    <string name="forgotpassword_title">Forgot password</string>
    <string name="resetpassword_btn">Reset Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="all_history">History</string>
    <string name="all_profile">Profile</string>
    <string name="profile_general">General</string>
    <string name="profile_no_karyawan">No. Karyawan</string>
    <string name="profile_placeholder_nokaryawan">NIK-0909090909</string>
    <string name="profile_address">Alamat</string>
    <string name="profile_placeholder_address">Jakarta Selatan</string>
    <string name="profile_change_password">Change Password</string>
    <string name="register_alreadyhaveaccount">Already Have Account? Please Login</string>
    <string name="login_donthaveaccount">Don\'t Have Account? Please Register</string>
    <string name="register_successful">Registering user successful!</string>
    <string name="register_failed">Registration failed!</string>
    <string name="all_email_cannot_empty">Email cannot be empty!</string>
    <string name="all_fullname_cannot_empty">Fullname cannot be empty!</string>
    <string name="all_password_cannot_empty">Password cannot be empty!</string>
    <string name="all_repeat_password_cannot_empty">Repeat Password cannot be empty!</string>
    <string name="all_password_too_short">Password too short!</string>
    <string name="all_password_and_repeat_password_not_match">Password and Repeat Password not match!</string>
    <string name="forgotpassword_emailsendto">"A password reset email has been sent to "</string>
    <string name="all_coming_soon">Coming soon …</string>
    <string name="history_title">Attendance History</string>
    <string name="history_logs">Logs</string>
    <string name="home_check_in">Check in</string>
    <string name="home_check_out">Check out</string>
    <string name="home_date_placeholder">29 Januari 2021</string>
    <string name="home_hour_placeholder">09:00</string>
    <string name="item_location_placeholder_title">PT. Phincon</string>
    <string name="item_location_placeholder_desc">Office. 88 @Kasablanca</string>
    <string name="home_hour_title">Hour: </string>
    <string name="home_location">Location</string>
    <string name="home_title">Your Attendance</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="all_no_internet">You\'re not connected to the internet</string>
    <string name="login_forgot_password">Forgot password ?</string>
    <string name="profile_programmer">Programmer</string>
    <string name="forgotpassword_desc">Please fill email to reset your account</string>
    <string name="home_please_select_location">Please select location!</string>
</resources>