<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/all_background_bottom"
    tools:context=".ui.home.home.HomeFragment">

    <View
        android:id="@+id/v_home_background_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/all_background_top"
        app:layout_constraintBottom_toTopOf="@id/v_home_background_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="3" />

    <View
        android:id="@+id/v_home_background_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_home_background_top"
        app:layout_constraintVertical_weight="6" />

    <View
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="-170dp"
        android:layout_marginEnd="-100dp"
        android:layout_marginBottom="@dimen/margin_all_medium"
        android:background="@drawable/login_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_home_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_all_large"
        android:layout_marginTop="@dimen/margin_all_medium"
        android:layout_marginEnd="@dimen/margin_all_medium"
        android:text="@string/home_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_all_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/iv_home_notification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_home_notification"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/margin_all_large"
        android:src="@mipmap/ic_notification"
        app:layout_constraintBottom_toBottomOf="@id/tv_home_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_home_title" />

    <View
        android:id="@+id/v_home_data"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_all_medium"
        android:layout_marginTop="@dimen/margin_all_large"
        android:background="@drawable/all_rectangle_rounded_20dp"
        app:layout_constraintBottom_toTopOf="@id/v_home_foreground_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_home_title"
        app:layout_constraintVertical_weight="3" />

    <View
        android:id="@+id/v_home_foreground_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_home_data"
        app:layout_constraintVertical_weight="5" />

    <TextView
        android:id="@+id/tv_home_hour_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_all_medium"
        android:layout_marginTop="@dimen/margin_all_medium"
        android:text="@string/home_hour_title"
        android:textColor="@color/all_text"
        app:layout_constraintStart_toStartOf="@id/v_home_data"
        app:layout_constraintTop_toTopOf="@id/v_home_data" />

    <TextView
        android:id="@+id/tv_home_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_all_tiny"
        android:text="@string/home_hour_placeholder"
        android:textColor="@color/all_text"
        app:layout_constraintBottom_toBottomOf="@id/tv_home_hour_title"
        app:layout_constraintStart_toEndOf="@id/tv_home_hour_title"
        app:layout_constraintTop_toTopOf="@id/tv_home_hour_title" />

    <TextView
        android:id="@+id/tv_home_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_all_medium"
        android:layout_marginEnd="@dimen/margin_all_medium"
        android:text="@string/home_date_placeholder"
        android:textColor="@color/all_text"
        app:layout_constraintEnd_toEndOf="@id/v_home_data"
        app:layout_constraintTop_toTopOf="@id/v_home_data" />

    <Button
        android:id="@+id/btn_home_check_in"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="@dimen/margin_all_xlarge"
        android:backgroundTint="@color/home_check_in"
        android:text="@string/home_check_in"
        android:textAllCaps="true"
        android:textSize="@dimen/text_all_big"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/v_home_data"
        app:layout_constraintEnd_toEndOf="@id/v_home_data"
        app:layout_constraintStart_toStartOf="@id/v_home_data"
        app:layout_constraintTop_toTopOf="@id/v_home_data" />

    <Button
        android:id="@+id/btn_home_checkout"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="@dimen/margin_all_xlarge"
        android:backgroundTint="@color/home_checkout"
        android:text="@string/home_check_out"
        android:textAllCaps="true"
        android:textSize="@dimen/text_all_big"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/v_home_data"
        app:layout_constraintEnd_toEndOf="@id/v_home_data"
        app:layout_constraintStart_toStartOf="@id/v_home_data"
        app:layout_constraintTop_toTopOf="@id/v_home_data" />

    <TextView
        android:id="@+id/tv_home_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_all_medium"
        android:layout_marginTop="@dimen/margin_all_medium"
        android:text="@string/home_location"
        android:textColor="@color/all_text_title"
        android:textSize="@dimen/text_all_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_home_data" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_home_location"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_home_location"
        tools:listitem="@layout/item_list" />

    <ProgressBar
        android:id="@+id/pb_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>